# bobkonf

./: .gitignore  CHANGELOG.md  bobkonf.cabal  cabal.project
app/: Main.hs
diyde/: diyde.cabal
diyde/lsp/LSP/Core/: Shake.hs
diyde/lsp/LSP/Diyde/: LanguageServer.hs  Rules.hs  SemanticTokens.hs  Server.hs  Spans.hs
diyde/src/Diyde/: Annotation.hs  ParserCombinators.hs  SrcSpan.hs  Syntax.hs
diyde/src/Diyde/Parser/: Annotation.hs
examples/: ex1.bnf
src/: BnfParser.hs  Check.hs  Config.hs  Handlers.hs  Rules.hs  SemanticTokens.hs  Server.hs  Syntax.hs
vscode/: README.md  package-lock.json  package.json
vscode/src/: extension.ts
