cabal-version: 3.4
name: bobkonf
version: 0.1.0.0
-- synopsis:
-- description:
license: NONE
author: Fendor
maintainer: fendor@posteo.de
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

common exts
  default-extensions:
    -- This is annoying with fourmolu
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    LambdaCase
    NoFieldSelectors
    NoImportQualifiedPost
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    StandaloneDeriving
    MultiParamTypeClasses
    FunctionalDependencies
    DeriveGeneric
    DeriveFunctor
    FlexibleContexts
    FlexibleInstances
    InstanceSigs
    RankNTypes
    ScopedTypeVariables
    TypeOperators
    TypeApplications

library
  import: warnings, exts
  exposed-modules:
    BnfParser
    Config
    Check
    Handlers
    Rules
    SemanticTokens
    Server
    Syntax

  -- other-modules:
  -- other-extensions:
  build-depends:
    aeson,
    base,
    bytestring,
    containers,
    extra,
    deepseq,
    generics-sop,
    hashable,
    hls-graph,
    diyde:diyde-lsp,
    diyde:diyde-anno,
    lens,
    lsp ^>= 2.7,
    lsp-types ^>=2.3,
    text-rope,
    mtl,
    megaparsec,
    optics,
    stm,
    text,

  hs-source-dirs: src
  default-language: Haskell2010
executable bnf-lsp
  import: warnings, exts
  main-is: Main.hs
  -- other-extensions:
  build-depends:
    base >=4.16.2.1 && < 5,
    bobkonf,

  hs-source-dirs: app
  default-language: GHC2021
